[metadata]
name = bg_cicd_template_test
description = A template for automated Databricks CI/CD pipeline creation and deployment using Azure DevOps and Databricks that triggers unit and integration test cases.
version = file: VERSION
author = Breanna George
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8
packages = find:
setup_requires = 
    wheel

[options.packages.find]
exclude = 
    tests
    tests.*

[mypy]
no_implicit_optional = True
warn_redundant_casts = True
pretty = True

[pydocstyle]
match_dir = bg_cicd_template_test

[flake8]
max-line-length = 88
max-complexity = 10
docstring-convention = google
extend-ignore = E203,D100,D107,W503,B008
extend-select = W504
exclude = .git, __pycache__, docs, references